# onDevice

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  index.md
middleware/: package.xml
middleware/radar_detection_demo_py/: README.md  package.xml  setup.cfg  setup.py
middleware/radar_detection_demo_py/radar_detection_demo_py/: excel_publisher.py  radar_subscriber.py  udp2ros_bridge.py
