<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>radar_detection_demo_py</name>
    <version>0.0.1</version>
    <description>ROS2 package for radar detection demo</description>
    <maintainer email="tglee@etri.re.kr">ETRI Researcher</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>radar_detection_msgs</depend>
</package>
